# sudoku-solver

./: .gitignore  CMakeLists.txt  README.md  compare.sh  log.csv  possible_value.hpp  run.sh  sudoku.cpp  sudoku.hpp  sudoku_backtracking.cpp  sudoku_solver  sup_print.hpp  sup_vector.hpp  test.ipynb  typedef.hpp  view_csv.py  view_id.py
include/: possible_value.hpp  sudoku.hpp  sup_print.hpp
result/: cpp_btk  cpp_pure_btk  cpp_wo_btk  py_btk
result/cpp_btk_sol/: sol2_easy.txt  sol3_easy.txt  sol4_evil.txt  sol4_hard.txt  sol4_medium.txt
result/cpp_pure_btk_sol/: sol1_easy.txt  sol1_evil.txt  sol1_expert.txt  sol1_hard.txt  sol1_medium.txt  sol2_easy.txt  sol2_evil.txt  sol2_expert.txt  sol2_hard.txt  sol2_medium.txt  sol3_easy.txt  sol3_evil.txt  sol3_expert.txt  sol3_hard.txt  sol3_medium.txt  sol4_easy.txt  sol4_evil.txt  sol4_expert.txt  sol4_hard.txt  sol4_medium.txt  sol5_easy.txt  sol5_evil.txt  sol5_expert.txt  sol5_hard.txt  sol5_medium.txt
result/cpp_wo_btk_sol/: sol1_expert.txt  sol1_hard.txt  sol2_expert.txt  sol2_hard.txt  sol3_evil.txt  sol3_expert.txt  sol3_hard.txt  sol4_evil.txt  sol5_easy.txt  sol5_evil.txt  sol5_expert.txt  sol5_medium.txt
result/problems/: test1_easy.txt  test1_evil.txt  test1_expert.txt  test1_hard.txt  test1_medium.txt  test2_easy.txt  test2_evil.txt  test2_expert.txt  test2_hard.txt  test2_medium.txt  test3_easy.txt  test3_evil.txt  test3_expert.txt  test3_hard.txt  test3_medium.txt  (+10 more)
test/: s1.txt  s2.txt  s3.txt  t1.txt  t2.txt  t3.txt  test_possible_value.cpp  test_sudoku.cpp  test_sup_print.cpp  test_typedef.cpp
(+13 files in other folders)
